--- a/firebase.json
+++ b/firebase.json
@@ -13,5 +13,13 @@
     "ui": {
       "enabled": true
     }
+  },
+  "hosting": {
+    "public": "out",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
   }
 }
