--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "clsx": "^1.1.1",
     "firebase": "^9.8.1",
+    "framer-motion": "^6.3.3",
     "next": "12.1.6",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
