--- a/firebase.json
+++ b/firebase.json
@@ -12,6 +12,12 @@
     },
     "ui": {
       "enabled": true
+    },
+    "functions": {
+      "port": 5001
+    },
+    "hosting": {
+      "port": 5000
     }
   },
   "hosting": {
@@ -26,6 +32,7 @@
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run lint",
       "npm --prefix \"$RESOURCE_DIR\" run build"
-    ]
+    ],
+    "source": "functions"
   }
 }
