ignore log files, button disabled while submitting, success page error message, use yarn for functions, email validation

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "emulate": "firebase emulators:start"
   },
   "dependencies": {
     "clsx": "^1.1.1",
