--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.21.2",
+    "googleapis": "^100.0.0",
     "nodemailer": "^6.7.5"
   },
   "devDependencies": {
