--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "emulate": "firebase emulators:start",
-    "deploy": "yarn build && firebase deploy --only hosting"
+    "deploy:web": "yarn build && firebase deploy --only hosting",
+    "deploy": "yarn build && firebase deploy"
   },
   "dependencies": {
     "clsx": "^1.1.1",
