--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "emulate": "firebase emulators:start",
-    "deploy:web": "yarn build && firebase deploy --only hosting",
+    "deploy:hosting": "yarn build && firebase deploy --only hosting",
     "deploy": "yarn build && firebase deploy"
   },
   "dependencies": {
